fix(starlight-ui-tweaks): language selector alignment

--- a/packages/starlight-ui-tweaks/styles/base.css
+++ b/packages/starlight-ui-tweaks/styles/base.css
@@ -2,3 +2,7 @@
   content: none;
   border: 0;
 }
+
+starlight-lang-select {
+  display: flex;
+}
